customer/public/css/shop.css
/*Remove the comments for the background color for visual aid*/

#shop-container {
    /*    background-color: #5a96d6;*/
    min-height: 50rem;
    padding: 2rem;
    margin: 0 auto;
    width: calc(100% - 7.5rem);
    font-family: 'Plus Jakarta Sans', 'Roboto', sans-serif;
}

#booth-icon-and-header {
    display: flex;
    flex-direction: row;
}

#booth-icon-and-header p {
/*    background-color: #09c372;*/
    font-size: 1.5rem;
    font-weight: bold;
    height: 3rem;
    margin-top: 0.5rem;
}

#booth-icon-and-header img {
    /*    background-color: #eaa953;*/
    width: 1.5rem;
    height: 1.5rem;
    margin-top: 0.3rem;
}

#shops-and-sorting-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

#shop-icon-header {
    display: flex;
    flex-direction: row;
}
#shop-icon-header p {
/*    background-color: #09c372;*/
    font-size: 1.5rem;
    font-weight: bold;
    margin-top: 0.5rem;
}

#shops-and-sorting-container img {
    width: 1.8rem;
    height: 1.8rem;
    flex-shrink: 0;
}

#sort-form {
/*    background-color: #354261;*/
    display: flex;
    flex-direction: row;
    align-items: center;
    flex-wrap: wrap;
    margin-top: 0.8rem;
}

#category-filter {
    display: flex;
    align-items: center;
}

#view-filter {
    display: flex;
    align-items: center;
    gap: 0.5rem;
}

#sort-form p {
    font-weight: bold;
}

#sort-by {
    font-weight: bold;
    padding-right: 0.5rem;
}

#view-gap {
    font-weight: bold;
    padding: 0.5rem;
}

.organization-list {
/*    background-color: #fff;*/
    height: 13rem;
}

.org-booths {
    display: flex;
    flex-direction: row;
    gap: 5rem;
}

.org-booths img {
    width: 10rem;
    height: 10rem;
    border-radius: 2rem;
}

#product-listing {
    display: grid;
    gap: 1rem;
    justify-content: center;
    overflow: hidden;
    grid-template-columns: repeat(5, 1fr);
    padding: 1rem;

}

.product-card {
    background-color: #fff;
    border: 1px solid #ddd;
    border-radius: 30px;
    padding: 1.5rem;
    max-width: 100%;
    min-height: 20rem;
    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
    transition: transform 0.3s ease, box-shadow 0.3s ease;
    display: flex;
    flex-direction: column;
    gap: 0.5rem;
    align-items: flex-start;
    text-align: left;
    overflow: hidden;
}

.product-card:hover {
    transform: translateY(-0.5rem);
    box-shadow: 0px 8px 12px rgba(0, 0, 0, 0.2);
    background-color: #EFEFEF;
}

.image-container {
    width: 235px; 
    height: 250px; 
    overflow: hidden; 
    display: flex;
    justify-content: center; 
    align-items: center; 
    border-radius: 10px; 
}

.product-card img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    border-radius: 10px;
}


.product-info {
    display: flex;
    flex-direction: column;
    gap: 0.3rem;
}

.product-name {
    font-size: 22px;
    font-weight: bold;
    margin: 0;
}

.product-org {
    font-size: 16px;
    font-weight: bold;
    margin: 0;
}

.product-org img {
    width: 14px;
    height: 14px;
    border-radius: 0;
}


.product-category {
    font-size: 16px;
    margin: 0;
}

/* to fix */
/* .product-category {
    display: flex;
    padding: 0.3rem 0.8rem;
    background-color: #fff3cd;
    color: #856404;
    font-size: 14px;
    font-weight: bold;
    border-radius: 10px;
} */

.product-description {
    font-weight: lighter;
    font-size: 16px;
    margin: 0;
    white-space: normal; 
    text-overflow: ellipsis; 
    overflow: hidden;
}

.product-price {
    font-size: 18px;
    font-weight: bold;
    margin: 0.5rem 0 0 0;
}

